--- a/vinhul-frontend/src/app/components/navbar/navbar.component.css
+++ b/vinhul-frontend/src/app/components/navbar/navbar.component.css
@@ -24,6 +24,7 @@
   align-items: center;
   justify-content: center;
   width: 500px;
+  margin: 0;
 }
 
 .navbar-links li {
@@ -34,7 +35,7 @@
 .navbar-links li a {
   color: white;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: bold;
 }
 
