fix: upload image fix

--- a/vinhul-frontend/src/app/components/cadastrar/cadastrar.component.html
+++ b/vinhul-frontend/src/app/components/cadastrar/cadastrar.component.html
@@ -53,6 +53,14 @@
           [(ngModel)]="foodharmony"
         />
       </div>
+      <div class="form-group">
+        <label>Foto</label>
+        <input
+          type="file" 
+          (change)="handleFoto($event)"
+          accept="image/*"
+        />
+      </div>
       <button type="submit" class="btn btn-primary">Cadastrar</button>
     </form>
   </div>
