--- a/vinhul-frontend/src/app/components/home/home.component.css
+++ b/vinhul-frontend/src/app/components/home/home.component.css
@@ -1,14 +1,40 @@
 .container{
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     align-content: center;
+    
 }
 
+h1{
+    text-align: center;
+}
 
 .card{
     display: flex;
-    width: 50px;
-    height: 50px;
+    flex-wrap: wrap;
+    width: 350px;
+    height: 450px;
+    margin: 20px;
     background-color: grey;
+    justify-content: flex-end;
+    color: white;
+}
+
+.btn{
+    background-color: black;
+    color: white;
+    
+}
+
+.img-container{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+    border: solid 1px white;
+}
+
+.img{
+    max-height: 250px;
 }
